--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,8 +11,7 @@
 		"nodejs_compat"
 	],
 	"ai": {
-		"binding": "AI",
-		"remote": true
+		"binding": "AI"
 	},
 	"assets": {
 		"directory": "public"
@@ -20,8 +19,8 @@
 	"durable_objects": {
 		"bindings": [
 			{
-				"name": "Chat",
-				"class_name": "Chat"
+				"name": "CloudArchitectAgent",
+				"class_name": "CloudArchitectAgent"
 			}
 		]
 	},
@@ -29,7 +28,7 @@
 		{
 			"tag": "v1",
 			"new_sqlite_classes": [
-				"Chat"
+				"CloudArchitectAgent"
 			]
 		}
 	],
